# tests_that_work

./: CMakeLists.txt  README.md  example.cpp  example.h  main.cpp
tests/: test_foo.cpp
